--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,23 +50,27 @@ dependencies {
     /*Android KTX is a set of Kotlin extensions to help your write concise and idiomatic code. */
     implementation 'androidx.activity:activity-ktx:1.3.0-alpha04'
     implementation 'androidx.fragment:fragment-ktx:1.3.1'
-
     //Kotlin Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
-
-    // ViewModel and LiveData
+    /*ViewModel and LiveData*/
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.0"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0"
-
-    //New Material Design
+    /*New Material Design*/
     implementation 'com.google.android.material:material:1.5.0'
-    //glide
+    /*Glide*/
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     /*Preference Manager*/
     implementation "androidx.preference:preference-ktx:1.2.0"
+    /*Networking*/
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.okhttp3:okhttp:4.9.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    /*Shimmer Effect*/
+    implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
 
 }
